# adb

./: .gitattributes  .gitignore  README.md  build.gradle  settings.gradle
adb/: build.gradle
adb/src/androidTest/java/com/charlesmuchene/adb/: ExampleInstrumentedTest.kt
adb/src/main/: AndroidManifest.xml
adb/src/main/cpp/: adb.cpp
adb/src/main/java/com/charlesmuchene/adb/: AdbApplication.kt
adb/src/main/java/com/charlesmuchene/adb/models/: AdbMessage.kt
adb/src/main/java/com/charlesmuchene/adb/receivers/: UsbConnectionReceiver.kt
adb/src/main/java/com/charlesmuchene/adb/ui/: HomeActivity.kt
adb/src/main/java/com/charlesmuchene/adb/utilities/: Constants.kt
adb/src/main/res/values/: colors.xml
adb/src/main/res/xml/: device_filter.xml
adb/src/test/java/com/charlesmuchene/adb/: ExampleUnitTest.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adb.cpp  adb.h  auth.cpp
app/src/main/cpp/include/: adb.h  auth.h
app/src/main/java/com/charlesmuchene/adb/: Adb.kt  AdbApplication.kt  HomeActivity.kt
app/src/main/java/com/charlesmuchene/adb/interfaces/: AdbInterface.kt  AdbProtocol.kt
app/src/main/java/com/charlesmuchene/adb/models/: AdbDevice.kt  AdbMessage.kt  AdbSocket.kt  FileStat.kt
app/src/main/java/com/charlesmuchene/adb/receivers/: UsbConnectionReceiver.kt
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_home.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
